--- a/fournisseurs.ui
+++ b/fournisseurs.ui
@@ -32,10 +32,10 @@
   <widget class="QTabWidget" name="tabWidget">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>80</y>
+     <x>20</x>
+     <y>70</y>
      <width>801</width>
-     <height>501</height>
+     <height>531</height>
     </rect>
    </property>
    <property name="palette">
@@ -133,7 +133,7 @@
     <string notr="true">background-color: rgb(68, 68, 68);</string>
    </property>
    <property name="currentIndex">
-    <number>2</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tab_4">
     <attribute name="title">
@@ -266,10 +266,10 @@
     <widget class="QGroupBox" name="groupBox">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>0</y>
-       <width>741</width>
-       <height>461</height>
+       <x>0</x>
+       <y>-10</y>
+       <width>801</width>
+       <height>521</height>
       </rect>
      </property>
      <property name="title">
@@ -278,8 +278,8 @@
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>120</y>
+        <x>10</x>
+        <y>80</y>
         <width>161</width>
         <height>20</height>
        </rect>
@@ -295,8 +295,8 @@ font: 75 11pt &quot;MS Shell Dlg 2&quot;; </string>
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>60</y>
+        <x>10</x>
+        <y>20</y>
         <width>201</width>
         <height>20</height>
        </rect>
@@ -313,9 +313,9 @@ color: rgb(206, 197, 64);</string>
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>90</y>
-        <width>171</width>
+        <x>10</x>
+        <y>50</y>
+        <width>181</width>
         <height>20</height>
        </rect>
       </property>
@@ -330,9 +330,9 @@ font: 75 11pt &quot;MS Shell Dlg 2&quot;; </string>
      <widget class="QLineEdit" name="le_nom">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>120</y>
-        <width>113</width>
+        <x>220</x>
+        <y>80</y>
+        <width>211</width>
         <height>22</height>
        </rect>
       </property>
@@ -345,9 +345,9 @@ background-color: rgb(255, 255, 255);</string>
      <widget class="QLineEdit" name="le_id">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>60</y>
-        <width>113</width>
+        <x>220</x>
+        <y>20</y>
+        <width>211</width>
         <height>22</height>
        </rect>
       </property>
@@ -359,9 +359,9 @@ background-color: rgb(255, 255, 255);</string>
      <widget class="QLineEdit" name="le_numtel">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>90</y>
-        <width>113</width>
+        <x>220</x>
+        <y>50</y>
+        <width>211</width>
         <height>22</height>
        </rect>
       </property>
@@ -373,8 +373,8 @@ background-color: rgb(255, 255, 255);</string>
      <widget class="QPushButton" name="pb_ajouter">
       <property name="geometry">
        <rect>
-        <x>380</x>
-        <y>150</y>
+        <x>450</x>
+        <y>30</y>
         <width>93</width>
         <height>28</height>
        </rect>
@@ -534,8 +534,8 @@ background-color: rgb(255, 255, 255);</string>
      <widget class="QLabel" name="label_6">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>150</y>
+        <x>10</x>
+        <y>110</y>
         <width>81</width>
         <height>21</height>
        </rect>
@@ -551,9 +551,9 @@ font: 75 11pt &quot;MS Shell Dlg 2&quot;; </string>
      <widget class="QLineEdit" name="Le_cat">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>150</y>
-        <width>113</width>
+        <x>220</x>
+        <y>110</y>
+        <width>211</width>
         <height>22</height>
        </rect>
       </property>
@@ -565,8 +565,8 @@ color: rgb(0, 0, 0);</string>
      <widget class="QLabel" name="label_8">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>180</y>
+        <x>10</x>
+        <y>140</y>
         <width>151</width>
         <height>21</height>
        </rect>
@@ -582,9 +582,9 @@ font: 75 11pt &quot;MS Shell Dlg 2&quot;; </string>
      <widget class="QLineEdit" name="Le_qal">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>180</y>
-        <width>113</width>
+        <x>220</x>
+        <y>140</y>
+        <width>211</width>
         <height>22</height>
        </rect>
       </property>
@@ -596,8 +596,8 @@ color: rgb(0, 0, 0);</string>
      <widget class="QPushButton" name="pb_modifier">
       <property name="geometry">
        <rect>
-        <x>440</x>
-        <y>320</y>
+        <x>450</x>
+        <y>70</y>
         <width>93</width>
         <height>28</height>
        </rect>
@@ -612,8 +612,8 @@ color: rgb(0, 0, 0);</string>
      <widget class="QComboBox" name="comboBox">
       <property name="geometry">
        <rect>
-        <x>440</x>
-        <y>280</y>
+        <x>620</x>
+        <y>60</y>
         <width>101</width>
         <height>21</height>
        </rect>
@@ -626,8 +626,8 @@ background-color: rgb(255, 255, 255);</string>
      <widget class="QLabel" name="label_10">
       <property name="geometry">
        <rect>
-        <x>420</x>
-        <y>250</y>
+        <x>560</x>
+        <y>30</y>
         <width>171</width>
         <height>20</height>
        </rect>
@@ -643,8 +643,8 @@ color: rgb(206, 197, 64);</string>
      <widget class="QPushButton" name="pb_supp">
       <property name="geometry">
        <rect>
-        <x>440</x>
-        <y>360</y>
+        <x>450</x>
+        <y>110</y>
         <width>93</width>
         <height>28</height>
        </rect>
@@ -656,20 +656,118 @@ color: rgb(206, 197, 64);</string>
        <string>suprimer</string>
       </property>
      </widget>
-     <widget class="QLabel" name="lb_img_ajt">
+     <widget class="QLineEdit" name="Le_email">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>220</x>
+        <y>170</y>
+        <width>211</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>170</y>
+        <width>121</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(206, 197, 64);
+font: 75 11pt &quot;MS Shell Dlg 2&quot;; </string>
+      </property>
+      <property name="text">
+       <string>Email</string>
+      </property>
+     </widget>
+     <widget class="QTableView" name="tabfournisseur">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>200</y>
+        <width>501</width>
+        <height>241</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="recher_edit">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>450</y>
+        <width>501</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="placeholderText">
+       <string>recherche</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
         <y>20</y>
-        <width>691</width>
-        <height>411</height>
+        <width>721</width>
+        <height>461</height>
        </rect>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
-     <zorder>lb_img_ajt</zorder>
+     <widget class="QRadioButton" name="trie_ref">
+      <property name="geometry">
+       <rect>
+        <x>530</x>
+        <y>200</y>
+        <width>111</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>trie par nom</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="trie_cat">
+      <property name="geometry">
+       <rect>
+        <x>530</x>
+        <y>230</y>
+        <width>121</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>trie par categorie</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="trie_qual">
+      <property name="geometry">
+       <rect>
+        <x>530</x>
+        <y>260</y>
+        <width>111</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Trie par qualité</string>
+      </property>
+     </widget>
+     <zorder>label_9</zorder>
      <zorder>label_2</zorder>
      <zorder>label_3</zorder>
      <zorder>label_4</zorder>
@@ -685,22 +783,14 @@ color: rgb(206, 197, 64);</string>
      <zorder>comboBox</zorder>
      <zorder>label_10</zorder>
      <zorder>pb_supp</zorder>
+     <zorder>Le_email</zorder>
+     <zorder>label_5</zorder>
+     <zorder>tabfournisseur</zorder>
+     <zorder>recher_edit</zorder>
+     <zorder>trie_ref</zorder>
+     <zorder>trie_cat</zorder>
+     <zorder>trie_qual</zorder>
     </widget>
-    <widget class="QLabel" name="label_9">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>10</y>
-       <width>791</width>
-       <height>461</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <zorder>label_9</zorder>
-    <zorder>groupBox</zorder>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
@@ -709,8 +799,8 @@ color: rgb(206, 197, 64);</string>
     <widget class="QLabel" name="bg_afficher">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>60</y>
+       <x>40</x>
+       <y>90</y>
        <width>641</width>
        <height>361</height>
       </rect>
@@ -735,94 +825,159 @@ color: rgb(206, 197, 64);</string>
       <string/>
      </property>
     </widget>
-    <widget class="QTableView" name="tabfournisseur">
-     <property name="geometry">
-      <rect>
-       <x>140</x>
-       <y>120</y>
-       <width>501</width>
-       <height>241</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="trie_ref">
-     <property name="geometry">
-      <rect>
-       <x>150</x>
-       <y>80</y>
-       <width>111</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>trie par nom</string>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="trie_cat">
-     <property name="geometry">
-      <rect>
-       <x>320</x>
-       <y>80</y>
-       <width>121</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>trie par categorie</string>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="trie_qual">
-     <property name="geometry">
-      <rect>
-       <x>490</x>
-       <y>80</y>
-       <width>111</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Trie par qualité</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="recher_edit">
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>380</y>
-       <width>561</width>
-       <height>22</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
-     </property>
-    </widget>
     <zorder>label_11</zorder>
     <zorder>bg_afficher</zorder>
-    <zorder>tabfournisseur</zorder>
-    <zorder>trie_ref</zorder>
-    <zorder>trie_cat</zorder>
-    <zorder>trie_qual</zorder>
-    <zorder>recher_edit</zorder>
    </widget>
    <widget class="QWidget" name="tab_3">
     <attribute name="title">
-     <string>Page</string>
+     <string>email</string>
     </attribute>
-    <widget class="QTableView" name="tablerecherc">
+    <widget class="QLineEdit" name="lineEdit_atchmnt_email">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>110</y>
-       <width>641</width>
-       <height>301</height>
+       <x>110</x>
+       <y>240</y>
+       <width>491</width>
+       <height>20</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="placeholderText">
+      <string>attachment</string>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="textEdit_email">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>300</y>
+       <width>591</width>
+       <height>201</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="placeholderText">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_browse_email">
+     <property name="geometry">
+      <rect>
+       <x>610</x>
+       <y>240</y>
+       <width>91</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Browse...</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_from_email">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>180</y>
+       <width>331</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="placeholderText">
+      <string>from</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_send_email">
+     <property name="geometry">
+      <rect>
+       <x>610</x>
+       <y>270</y>
+       <width>91</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>send</string>
+     </property>
+    </widget>
+    <widget class="QGroupBox" name="groupBox_7">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>0</y>
+       <width>611</width>
+       <height>171</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>liste</string>
+     </property>
+     <widget class="QTableView" name="tableView_email">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>591</width>
+        <height>141</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_psswrd_email">
+     <property name="geometry">
+      <rect>
+       <x>460</x>
+       <y>180</y>
+       <width>241</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="placeholderText">
+      <string>password</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_to_email">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>210</y>
+       <width>591</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="placeholderText">
+      <string>to</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_subject_email">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>270</y>
+       <width>491</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="placeholderText">
+      <string>subject</string>
      </property>
     </widget>
    </widget>
@@ -831,7 +986,7 @@ color: rgb(206, 197, 64);</string>
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>10</y>
+     <y>-10</y>
      <width>411</width>
      <height>81</height>
     </rect>
