--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -37,14 +37,14 @@ font: 22pt &quot;Palatino Linotype&quot;;</string>
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>100</y>
+      <x>10</x>
+      <y>70</y>
       <width>771</width>
       <height>421</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -104,10 +104,90 @@ font: 22pt &quot;Palatino Linotype&quot;;</string>
        <bool>true</bool>
       </property>
      </widget>
+     <widget class="QPushButton" name="le_trie_par_nom">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>70</y>
+        <width>121</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:  rgb(206, 197, 64);</string>
+      </property>
+      <property name="text">
+       <string>Trier par nom </string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_3">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>190</y>
+        <width>121</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:  rgb(206, 197, 64);</string>
+      </property>
+      <property name="text">
+       <string>Afficher Statistique</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_4">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>230</y>
+        <width>111</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:  rgb(206, 197, 64);</string>
+      </property>
+      <property name="text">
+       <string>Export PDF</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="le_trie_salaire">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>150</y>
+        <width>121</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:  rgb(206, 197, 64);</string>
+      </property>
+      <property name="text">
+       <string>Trier par salaire </string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="le_trie_age">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>110</y>
+        <width>121</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:  rgb(206, 197, 64);</string>
+      </property>
+      <property name="text">
+       <string>Trier par age</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
-      <string>Ajouter</string>
+      <string>AMS</string>
      </attribute>
      <widget class="QLabel" name="label_3">
       <property name="geometry">
@@ -357,10 +437,10 @@ font: 8pt &quot;MS Serif&quot;;</string>
      <widget class="QPushButton" name="pb_ajout">
       <property name="geometry">
        <rect>
-        <x>440</x>
-        <y>150</y>
+        <x>450</x>
+        <y>140</y>
         <width>131</width>
-        <height>51</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -370,107 +450,39 @@ font: 8pt &quot;MS Serif&quot;;</string>
        <string>Ajouter</string>
       </property>
      </widget>
-    </widget>
-    <widget class="QWidget" name="tab_3">
-     <attribute name="title">
-      <string>supprimer</string>
-     </attribute>
-     <widget class="QLabel" name="label_8">
+     <widget class="QComboBox" name="comboBox">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>771</width>
-        <height>391</height>
+        <x>620</x>
+        <y>90</y>
+        <width>73</width>
+        <height>22</height>
        </rect>
       </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(68, 68, 68);</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
      </widget>
-     <widget class="QLabel" name="label_9">
+     <widget class="QPushButton" name="le_modifier">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>50</y>
-        <width>671</width>
-        <height>291</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="pixmap">
-       <pixmap>../../../Downloads/black-gold-marble-texture_125540-835.jpg</pixmap>
-      </property>
-      <property name="scaledContents">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_10">
-      <property name="geometry">
-       <rect>
-        <x>560</x>
-        <y>130</y>
-        <width>181</width>
-        <height>211</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="pixmap">
-       <pixmap>../../../Downloads/1000_F_299880076_yQuSLoURK5zcMBQJwiCRpa25sfnuJ4Z8_preview_rev_1.png</pixmap>
-      </property>
-      <property name="scaledContents">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_33">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>130</y>
-        <width>251</width>
+        <x>450</x>
+        <y>180</y>
+        <width>131</width>
         <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true"> color: rgb(206, 197, 64);
-font: 15pt &quot;Palatino Linotype&quot;;</string>
+       <string notr="true">background-color:  rgb(206, 197, 64);</string>
       </property>
       <property name="text">
-       <string>CIN de l'employé : </string>
+       <string>Modifier</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEdit_7">
+     <widget class="QPushButton" name="le_supprimer">
       <property name="geometry">
        <rect>
-        <x>300</x>
-        <y>130</y>
-        <width>211</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(0, 0, 0);
-background-color: rgb(206, 197, 64);
-font: 8pt &quot;Akhbar MT&quot;;</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton_2">
-      <property name="geometry">
-       <rect>
-        <x>290</x>
-        <y>250</y>
-        <width>141</width>
-        <height>41</height>
+        <x>450</x>
+        <y>220</y>
+        <width>131</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -478,78 +490,6 @@ font: 8pt &quot;Akhbar MT&quot;;</string>
       </property>
       <property name="text">
        <string>Supprimer</string>
-      </property>
-     </widget>
-     <widget class="QGroupBox" name="groupBox_2">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>40</y>
-        <width>671</width>
-        <height>301</height>
-       </rect>
-      </property>
-      <property name="title">
-       <string>Supp</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="tab_4">
-     <attribute name="title">
-      <string>Modifier </string>
-     </attribute>
-     <widget class="QLabel" name="label_11">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>771</width>
-        <height>391</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(68, 68, 68);</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_23">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>50</y>
-        <width>671</width>
-        <height>291</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="pixmap">
-       <pixmap>../../../Downloads/black-gold-marble-texture_125540-835.jpg</pixmap>
-      </property>
-      <property name="scaledContents">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_25">
-      <property name="geometry">
-       <rect>
-        <x>600</x>
-        <y>180</y>
-        <width>181</width>
-        <height>211</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="pixmap">
-       <pixmap>../../../Downloads/1000_F_299880076_yQuSLoURK5zcMBQJwiCRpa25sfnuJ4Z8_preview_rev_1.png</pixmap>
-      </property>
-      <property name="scaledContents">
-       <bool>true</bool>
       </property>
      </widget>
     </widget>
@@ -611,13 +551,23 @@ font: 8pt &quot;Akhbar MT&quot;;</string>
        <bool>true</bool>
       </property>
      </widget>
-     <widget class="QTableView" name="tableView">
+     <widget class="QTableView" name="tab_employes">
       <property name="geometry">
        <rect>
-        <x>90</x>
-        <y>90</y>
-        <width>531</width>
+        <x>40</x>
+        <y>50</y>
+        <width>691</width>
         <height>221</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="rech">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>310</y>
+        <width>301</width>
+        <height>51</height>
        </rect>
       </property>
      </widget>
