--- a/fournisseurs.ui
+++ b/fournisseurs.ui
@@ -133,7 +133,7 @@
     <string notr="true">background-color: rgb(68, 68, 68);</string>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -566,9 +566,9 @@ font: 75 11pt &quot;MS Shell Dlg 2&quot;; </string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>200</y>
+        <y>240</y>
         <width>781</width>
-        <height>241</height>
+        <height>201</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -594,7 +594,7 @@ font: 75 11pt &quot;MS Shell Dlg 2&quot;; </string>
      <widget class="QLabel" name="label_9">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>20</x>
         <y>20</y>
         <width>721</width>
         <height>461</height>
@@ -662,6 +662,36 @@ font: 75 11pt &quot;MS Shell Dlg 2&quot;; </string>
        <bool>true</bool>
       </property>
      </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>200</y>
+        <width>121</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(206, 197, 64);
+font: 75 11pt &quot;MS Shell Dlg 2&quot;;</string>
+      </property>
+      <property name="text">
+       <string>adresse</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="Le_adresse">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>200</y>
+        <width>211</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
      <zorder>label_9</zorder>
      <zorder>label_2</zorder>
      <zorder>label_3</zorder>
@@ -686,6 +716,8 @@ font: 75 11pt &quot;MS Shell Dlg 2&quot;; </string>
      <zorder>trie_cat</zorder>
      <zorder>trie_qual</zorder>
      <zorder>ges_label_logo</zorder>
+     <zorder>label_7</zorder>
+     <zorder>Le_adresse</zorder>
     </widget>
    </widget>
    <widget class="QWidget" name="tab_3">
@@ -869,6 +901,94 @@ font: 75 11pt &quot;MS Shell Dlg 2&quot;; </string>
       </property>
       <property name="scaledContents">
        <bool>true</bool>
+      </property>
+     </widget>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="tab_2">
+    <attribute name="title">
+     <string>Géolocalisation</string>
+    </attribute>
+    <widget class="QGroupBox" name="groupBox_3">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>-10</y>
+       <width>801</width>
+       <height>521</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>GroupBox</string>
+     </property>
+     <widget class="QLabel" name="label_11">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>70</y>
+        <width>91</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(206, 197, 64);
+font: 75 11pt &quot;MS Shell Dlg 2&quot;;</string>
+      </property>
+      <property name="text">
+       <string>adresse</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_12">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>40</y>
+        <width>161</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 11pt &quot;MS Shell Dlg 2&quot;;
+color: rgb(206, 197, 64);</string>
+      </property>
+      <property name="text">
+       <string>choisir un identifiant</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_pic">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>150</y>
+        <width>681</width>
+        <height>331</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QTextEdit" name="textEdit">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>80</y>
+        <width>151</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_2">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>40</y>
+        <width>151</width>
+        <height>22</height>
+       </rect>
       </property>
      </widget>
     </widget>
