--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -120,7 +120,7 @@ font: 22pt &quot;Palatino Linotype&quot;;</string>
        <string>Trier par nom </string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="le_afficher_statistique">
       <property name="geometry">
        <rect>
         <x>80</x>
@@ -136,7 +136,7 @@ font: 22pt &quot;Palatino Linotype&quot;;</string>
        <string>Afficher Statistique</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_4">
+     <widget class="QPushButton" name="export_pdf">
       <property name="geometry">
        <rect>
         <x>80</x>
@@ -183,6 +183,18 @@ font: 22pt &quot;Palatino Linotype&quot;;</string>
       <property name="text">
        <string>Trier par age</string>
       </property>
+     </widget>
+     <widget class="QStackedWidget" name="stackedWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>80</y>
+        <width>231</width>
+        <height>181</height>
+       </rect>
+      </property>
+      <widget class="QWidget" name="page"/>
+      <widget class="QWidget" name="page_2"/>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
